Refactor codebase for modularity, add QnA, caching, file uploads, and tests